# omnimodal-agent-memory

./: .env.example  .gitignore  CLAUDE.md  README.md  brief.md  main.py  manifest.json  pyproject.toml
app/: __init__.py  agent.py  api.py  config.py  embed.py  ingest.py  prompts.py  schemas.py  search.py
notebooks/: visualize_embeddings.ipynb
scripts/: demo_query.py  ingest_dataset.py  load_sample_data.py
